fixing logo alignment

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -387,6 +387,8 @@ img {
 }
 
 .skills__name {
+  display: flex;
+  align-items: center;
   font-size: var(--normal-font-size);
   font-weight: var(--font-medium);
 }
